fix: unified CSV usage in text, modified text alignment in modal

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,10 +19,13 @@
     width: 100%
 }
 
+#csvImportModal .modal-dialog.onboarding_steps .modal-body li {
+    text-align: left !important;
+  }
 #csvImportModal .modal-header {
   flex-direction: row;
   justify-content: center;
-  
+
   h2 {
     text-align: center;
   }
